# gretchen-flow

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
Casks/: gretchen-flow.rb
desktop/scripts/: dev-build.sh  gen_icons.py  gen_tray_icons.py
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  config.rs  format_ai.rs  history.rs  inject.rs  lists.rs  main.rs  model.rs  polish.rs  transcribe.rs
desktop/ui/: hotkey.html  hotkey.js  index.html  menu.html  menu.js  model.html  setup.html  setup.js
docs/: ARCHITECTURE.md
python/: LICENSE  README.md  pyproject.toml
python/src/gretchen_flow/: __init__.py  app.py  config.py  recorder.py
python/src/gretchen_flow/engines/: __init__.py  base.py  faster_whisper_engine.py  mlx_whisper_engine.py
python/tests/: test_config.py  test_engines.py
src/gretchen_flow/: hotkey.py  injector.py
