[package]
name = "gretchen-flow"
version = "0.2.0"
description = "Push-to-talk voice dictation: press a hotkey, speak, and your words appear wherever your cursor is."
authors = ["Matthew Kope"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
cpal = "0.15"
whisper-rs = { version = "0.14", features = ["metal"] }
enigo = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = { version = "2", features = ["json"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
