[package]
name = "gretchen-flow"
version = "0.2.4"
description = "Push-to-talk voice dictation: press a hotkey, speak, and your words appear wherever your cursor is."
authors = ["Matthew Kope"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
cpal = "0.15"
whisper-rs = { version = "0.14", features = ["metal"] }
enigo = "0.5"
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
block2 = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = "2"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
